    
-English:
    -The spelling rule now accepts words with hyphens if the parts are valid words.
     For example, "web-based" is accepted now. This avoids a lot of false alarms.

-Esperanto:
    -added several rules

-French:
    -added/improved several rules

-German:
    -fixed false alarm for words like "Stil-" in phrases like "Stil- und 
     Grammatikprüfung" (issue #93)

-Polish:
    -added/improved many rules
    -improved disambiguation
    -improved spell-checking of foreign words with apostrophes
    
-Portuguese:
    -added/improved several rules
    -added around 54 compound words
    
-Russian:
    - added big wordlist to spellcheck dictionary. Thanks for wordlist to Dmitri Gabinski
    - fixed wrong tag in tagger dictionary:  ADJ_Comp --> ADJ_Sup,  ADJ_S --> ADJ_Com
    - added/improved several rules
       
    
-Asturian, Italian, Lithuanian, Malayalam, Swedish, and Tagalog have been switched
 to an SRX-based sentence tokenizer implementation. 

-Wikipedia:
    -The deprecated options check-dump and wiki-index have been removed
     from org.languagetool.dev.wikipedia.Main. Please use check-data
     and index-data instead.

-API:
    -Almost all deprecated methods and classes have been removed. If you're upgrading 
     from a version earlier than 2.5, we recommend to upgrade to 2.5 first, fix all
     deprecation warnings, and then upgrade to 2.6.
    -If you extend the 'Language' class and don't implement the getSentenceTokenizer()
     method, your language now uses SimpleSentenceTokenizer. This is a very simple
     tokenizer and you probably want to implement getSentenceTokenizer() to return
     a LocalSRXSentenceTokenizer instead that's adapted to your needs.
    -Rule.supportsLanguage() now also works for PatternRules (i.e. rules loaded from
     XML files). It used to always return 'false' for those rules.
    -The public field Language.DEMO has been removed. It is now only available 