@@ -19,6 +19,7 @@ LanguageTool Change Log
 -German:
     -fixed false alarm for words like "Stil-" in phrases like "Stil- und 
      Grammatikprüfung" (issue #93)
+    -detect wrong uppercase spelling in sentences like "Die Blaue Tür"
 
 -Polish:
     -added/improved many rules
